<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.topzap.android.bakingtime.activities.MainActivity">

  <android.support.v7.widget.RecyclerView
    android:id="@+id/rv_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

  </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>
