<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="com.topzap.android.bakingtime.fragments.RecipeSummaryFragment"
  >

  <TextView
    android:id="@+id/tv_ingredients_list"
    android:textStyle="italic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin_large"
    android:lineSpacingExtra="2dp"
    android:textColor="#AAAAAA"
    tools:text="bla bla bla bla bla bla"/>

  <android.support.v7.widget.RecyclerView
    android:id="@+id/rv_recipe_steps"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">
  </android.support.v7.widget.RecyclerView>

</LinearLayout>
