...
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.5"
    />

  <TextView
    android:id="@+id/tv_recipe_step_description"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:padding="@dimen/default_margin_large"
    app:layout_constraintBottom_toTopOf="@id/btn_back"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
...
